@@ -12,8 +12,11 @@ import sys
 
 sys.path.insert(0, os.path.dirname(sys.argv[0]))
 if os.name != 'nt':
-    sys.path.insert(1, os.path.join('@prefix@', 'lib',
-		    'python' + sys.version[:3], 'site-packages'))
+    if '@PYTHON_INSTALL_DIR@': # value of --with-python-install-dir
+        sys.path.insert(1, '@PYTHON_INSTALL_DIR@')
+    else:
+        sys.path.insert(1, os.path.join('@prefix@', 'lib',
+                        'python' + sys.version[:3], 'site-packages'))
 
 import isc.checkds
 
